srcMyCoreApp/main/default/objects/Account/fields/My_AccountDetail__c.field-meta.xml
<CustomField>
    <fullName>My_AccountDetail__c</fullName>
    <label>My@AccountDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>