srcMyCoreApp/main/default/objects/Account/fields/MyAccountDetail__c.field-meta.xml
<CustomField>
    <fullName>MyAccountDetail__c</fullName>
    <label>MyAccountDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>