srcMyCoreApp/main/default/objects/Account/fields/Test_April_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Test_April_Picklist_1__c</fullName>
    <label>Test April Picklist-1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Winter</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
                <isActive>false</isActive>
                <label>Summer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>