srcMyCoreApp/main/default/objects/Account/fields/Test_field_March__c.field-meta.xml
<CustomField>
    <fullName>Test_field_March__c</fullName>
    <label>Test field March</label>
    <length>255</length>
    <type>Text</type>
</CustomField>