srcMyCoreApp/main/default/objects/Account/fields/TestJuneField__c.field-meta.xml
<CustomField>
    <fullName>TestJuneField__c</fullName>
    <label>TestJuneField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>